<resources>
    <string name="app_name">BOLAR</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="bank_settings">Bank Settings</string>
    <string name="application">Applications</string>
    <string name="new_application">New</string>
    <string name="score_history">Score History</string>
    <string name="customer_support">Customer Support</string>
    <string name="log_out">Log Out</string>
    <string name="pending_application">View Pending</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="_750">750</string>
    <string name="age_of_history">Age of history</string>
    <string name="payment_history">Payment history</string>
    <string name="derogatory_complaints">Derogatory complaints</string>
    <string name="good">Good</string>
    <string name="stay_duration">Stay Duration</string>
</resources>
